--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,7 @@
 :root {
   --light-mode-bg: hsl(0, 0%, 98%);
   --light-mode-text: hsl(200, 15%, 8%);
+  --light-mode-element: hsl(0, 0%, 100%);
   --dark-mode-bg: hsl(207, 26%, 17%);
   --dark-mode-text: hsl(0, 0%, 100%);
   --dark-mode-element: hsl(209, 23%, 22%);
@@ -28,7 +29,7 @@ body {
 nav {
   width: 100%;
   padding: 10px 0;
-  background-color: #fff;
+  background-color: var(--light-mode-element);
 }
 
 .dark-mode nav {
@@ -145,7 +146,7 @@ nav button {
 
 .detail-btn {
   padding: 10px 25px;
-  background-color: #fff;
+  background-color: var(--light-mode-element);
   border-radius: 5px;
   color: var(--light-mode-text);
 }
